# HAUS

./: .gitignore  Dockerfile.api.debug  Dockerfile.client.debug  README.md  debug.compose.yml  debug.sh  plugins  pyproject.toml  setup.sh
doc/: scopes.md
haus_api/: app.py  config.yaml  haus_utils  models.py
haus_api/controllers/: __init__.py  plugins.py  users.py
haus_api/models/: __init__.py  config.py  users.py
haus_api/util/: __init__.py  access.py  cookies.py  dependencies.py  enums.py  errors.py  events.py  global_context.py  guards.py  plugin_loader.py  session_middleware.py
haus_client/: .eslintrc.cjs  index.html  package.json  vite.config.ts
haus_client/src/: App.tsx  index.css  main.tsx  routes.tsx
haus_client/src/components/PluginData/: FieldRender.tsx  PropertyRenderer.tsx
haus_client/src/components/ScopeSelection/: ScopeSelect.tsx
haus_client/src/lang/: en.json
haus_client/src/modals/: CallActionModal.tsx  CreateUserModal.tsx  index.tsx
haus_client/src/styles/: app.scss  index.scss
haus_client/src/styles/views/: greeter.scss  index.scss  layout.scss  pluginView.scss
haus_client/src/types/: auth.ts  plugin.ts  scope.ts
haus_client/src/types/pluginTypes/: action.ts  common.ts  entity.ts  event.ts
haus_client/src/util/: NamedIcon.tsx  notifications.tsx
haus_client/src/util/api/: index.ts  methods.ts  provider.tsx  types.ts
haus_client/src/views/Greeter/: Greeter.tsx
haus_client/src/views/Layout/: Layout.tsx
haus_client/src/views/PluginView/: ActionSelector.tsx  EntityCard.tsx  PluginViewPage.tsx
(+6 files in other folders)
